--- a/demo/locale/ja/LC_MESSAGES/messages.mo.json
+++ b/demo/locale/ja/LC_MESSAGES/messages.mo.json
@@ -1,7 +1,9 @@
 {
-  "catalog": {
-    "simple-string": "\u7c21\u5358\u306a\u30b9\u30c8\u30ea\u30f3\u30b0",
-    "singular-string": "\u65e5\u672c\u8a9e\u306b\u306f\u8907\u6570\u5f62\u304c\u3042\u308a\u307e\u305b\u3093\u3002"
-  },
-  "plural": null
+"catalog": {
+"simple-string": "\u7c21\u5358\u306a\u30b9\u30c8\u30ea\u30f3\u30b0",
+"singular-string": [
+"\u65e5\u672c\u8a9e\u306b\u306f\u8907\u6570\u5f62\u304c\u3042\u308a\u307e\u305b\u3093\u3002"
+]
+},
+"plural": "0"
 }
